# braiins-open

./: .gitignore
coins/bitcoin/: Cargo.toml
coins/bitcoin/src/: lib.rs
noise-proxy/: Cargo.toml
protocols/stratum/: Cargo.toml
protocols/stratum/src/: keytool.rs
protocols/stratum/src/v2/noise/: auth.rs
protocols/stratum/src/v2/noise/auth/: formats.rs
protocols/wire/: Cargo.toml
protocols/wire/src/: client.rs  lib.rs  proxy.rs
protocols/wire/src/proxy/codec/: v1.rs  v2.rs
protocols/wire/src/proxy/codec/v2/: proto.rs
stratum-proxy/: Cargo.toml
stratum-proxy/src/: translation.rs
utils-rs/async-utils/: Cargo.toml
utils-rs/async-utils/src/: halthandle.rs  lib.rs  maybe_future.rs
utils-rs/logging/: Cargo.toml
utils-rs/metrics/: Cargo.toml
utils-rs/scm/scm/: Cargo.toml
utils-rs/scm/scm-macros/: Cargo.toml
utils-rs/unvariant/unvariant/: Cargo.toml
utils-rs/unvariant/unvariant-macros/: Cargo.toml
utils-rs/unvariant/unvariant-tests/: Cargo.toml
