[package]
name = "ii-stratum-proxy"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
ii-stratum = { path = "../protocols/stratum" }
ii-wire = { path = "../protocols/wire", features = ["serde"]}
ii-async-utils = { path = "../utils-rs/async-utils" }
ii-logging = { path = "../utils-rs/logging" }
ii-metrics = { path = "../utils-rs/metrics", optional = true}
ii-noise-proxy = { path = "../noise-proxy" }
ii-unvariant = { path = "../utils-rs/unvariant/unvariant" }
ii-scm = { path = "../utils-rs/scm/scm" }
futures = "0.3.21"
async-trait = "0.1.53"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
bytes = "1.1.0"
thiserror = "1.0.30"
anyhow = "1.0.56"
arrayvec = "0.7.2"
clap = "3.1.9"
bitcoin_hashes = "0.10.0"
primitive-types = "0.11.1"
serde = "1.0.136"
serde_json = "1.0.79"
structopt = "0.3.26"
toml = "0.5.9"
prometheus = { version = "0.13.0", features = ["process"], optional = true }

[features]
v2json = ["ii-stratum/v2json"]
prometheus_metrics = ["prometheus", "ii-metrics"]
