[package]
name = "ii-bitcoin"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
bitcoin_hashes = "0.10.0"
lazy_static = "1.4.0"
packed_struct = "0.10.0"
packed_struct_codegen = "0.10.0"
primitive-types = "0.11.1"
thiserror = "1.0.30"
