[package]
name = "ii-stratum"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[[bin]]
name = "ii-stratum-keytool"
path = "src/keytool.rs"
#test = false
bench = false

[dependencies]
ii-bitcoin = { path = "../../coins/bitcoin" }
ii-wire = { path = "../wire" }
ii-async-utils = { path = "../../utils-rs/async-utils" }
ii-logging = { path = "../../utils-rs/logging" }
ii-unvariant = { path = "../../utils-rs/unvariant/unvariant"}
futures = "0.3.21"
async-trait = "0.1.53"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
bytes = "1.1.0"
thiserror = "1.0.30"
anyhow = "1.0.56"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_repr = "0.1.7"
byteorder = "1.4.3"
hex = "0.4.3"
# Temporarily disabled, see v1 TODO
#serde_tuple = "0.2.2"
packed_struct = "0.10.0"
packed_struct_codegen = "0.10.0"
bitcoin_hashes = "0.10.0"
snow = { version = "0.9.0", features = ["ring-accelerated"] }
primitive-types = "0.11.1"
structopt = "0.3.26"
rand = "0.7.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
x25519-dalek = "1.2.0"
bs58 = { version = "0.4.0", features = ["check"] }

[dev-dependencies]
byte_string = "1.0.0"

[features]
v2json = []
