[package]
name = "ii-wire"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
bytes = "1.1.0"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
pin-project = "1.0.10"
thiserror = "1.0.30"
serde = { version = "1.0.136", optional = true, features = ["derive"] }
ii-logging = { path = "../../utils-rs/logging" }

[dev-dependencies]
serde_json = "1.0.79"

