[package]
name = "ii-async-utils"
version = "0.3.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
futures = "0.3.21"
once_cell = "1.10.0"
pin-project-lite = "0.2.8"
tokio = { version = "1.17.0", features = ["full"]}
# we need tokio-stream to support stream wrappers for Signals, not in the latest version yet
tokio-stream = { git = "https://github.com/tokio-rs/tokio", rev="6fd06aaeecce21bcf31cbe485fe0060e3f07e983", features = ["default", "signal"] }
