[package]
name = "ii-logging"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
slog-term = "2.9.0"
slog-async = "2.7.0"
slog-json = "2.6.1"
slog-envlogger = "2.2.0"
slog-atomic = "3.1.0"

[dev-dependencies]
tempfile = "3.3.0"
