[package]
name = "ii-metrics"
version = "0.2.0"
authors = ["Jakub Trnka <jakub.trnka@braiins.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ii-scm = { path = "../scm/scm" }
prometheus = { version = "0.13.0", features = ["process"] }
rustc_version = "0.4.0"
thiserror = "1.0.30"
